# ldea-Monad-Contract-Interaction-Shape-Analyzer

./: .env.example  .gitignore  API_USAGE.md  README.md  requirements.txt
docs/: frontend-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/picture/: 下载.jfif
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConnectWallet.tsx  ScoreDisplay.tsx  SubmitScore.tsx  TokenInput.tsx
frontend/src/config/: wagmi.ts
python/: README.md  api_server.py  pyproject.toml  requirements.txt  test_modules.py
python/config/: networks.json
python/data/: cache.db  test_cache.db
python/src/analyzers/: __init__.py  interaction_shape.py
python/src/api/: main.py
python/src/blockchain/: __init__.py  blockvision_client.py  contract_reader.py  nansen_client.py  score_registry.py  web3_client.py
python/src/scoring/: contract_permission.py  holder_analysis.py  total_scorer.py  unique_eoa.py
python/src/utils/: contract_utils.py  simple_db.py
python/tests/: test_contract_permission.py  test_unique_eoa.py  test_web3_client.py
